[gd_scene load_steps=6 format=2]

[ext_resource path="res://actors/GeneralMonster.gd" type="Script" id=1]
[ext_resource path="res://assets/temp/temp_godzilla.jpg" type="Texture" id=2]
[ext_resource path="res://assets/lifebar_fill.png" type="Texture" id=3]
[ext_resource path="res://assets/lifebar_bg.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65.5576, 43.3387 )

[node name="GeneralMonster" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.205901, 0.770889 )
scale = Vector2( 0.0942548, 0.0942549 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -42.0
margin_top = -54.0
margin_right = 354.0
margin_bottom = -1.0
rect_scale = Vector2( 0.24, 0.08 )
value = 46.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="TransparencyTween" type="Tween" parent="."]
[connection signal="area_entered" from="." to="." method="_on_GeneralMonster_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_GeneralMonster_body_entered"]
